QualityControlledData/version1/README.md
The data files provided here are:
* CSV files with the collected environmental, event, and omics data (being [ENA accession numbers](https://www.ebi.ac.uk/ena/browser/home)) - where data flags were added to mitigate confusion about the units, and character malformations were corrected. This version is provided in two forms: 
      * [OSD19Data_HumanReadable_version1.csv](https://raw.githubusercontent.com/ocean-sampling-day/OSD2019/main/QualityControlledData/version1/OSD19Data_HumanReadable_version1.csv) which is a version that humans will find more comfortable to read
      * [OSD19Data_MachineReadable_version1.csv](https://raw.githubusercontent.com/ocean-sampling-day/OSD2019/main/QualityControlledData/version1/OSD19Data_MachineReadable_version1.csv) which is a version being necessary to generate the turtle file
* CSV files with the metadata to accompany these data files:
    * [OSD19Metadata_HumanReadable_version1.csv](https://raw.githubusercontent.com/ocean-sampling-day/OSD2019/main/QualityControlledData/version1/OSD19Metadata_HumanReadable_version1.csv) to accompany the equivalently-named Data file
    * [OSD19Metadata_MachineReadable_version1.csv](https://raw.githubusercontent.com/ocean-sampling-day/OSD2019/main/QualityControlledData/version1/OSD19Metadata_MachineReadable_version1.csv), to accompany the equivalently-named Data file
* A turtle file with the collected environmental, event and omics data described in RDF triples: [OSD19Data_MachineReadable_version1.ttl](https://raw.githubusercontent.com/ocean-sampling-day/OSD2019/main/QualityControlledData/version1/OSD19Data_MachineReadable_version1.ttl).  
This file was generated using [this template](https://raw.githubusercontent.com/ocean-sampling-day/OSD2019/main/QualityControlledData/version1/OSD19Data_MachineReadable_version1.ldt) with [PySUByT](https://github.com/vliz-be-opsci/pysubyt).
* The station information spreadsheet
